tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__TipsandTricks-AAAAAAAAAAAAAAAAAAAALA==__UndergroundFluid-AAAAAAAAAAAAAAAAAAAJ-w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2555,
  "prerequisites": [
    765
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So you're probably wondering what all the underground fluids are. You can actually check so in NEI now!\n\nJust look for the tab called §oUnderground Fluid Stats§r. You can click §oSee All§r for a general overview, search by fluid, or search by planet.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Underground Fluids",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    765
  ],
  "rewards": [],
  "tasks": []
}
